header responsive ended

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
 <nav>
     <img src="Images/Group 40071 (2).png" alt="">
-    <h1>Discover the world</h1>
+    <h1>Discover <span> the world</span></h1>
     <ul>
-        <li><a href="">Home</a></li>
+        <li><a href=""> <span>Home</span></a></li>
         <li><a href="">Packages</a></li>
         <li><a href="">Testimonial</a></li>
         <li><a href="">Blog</a></li>
@@ -22,7 +22,13 @@
 <div class="bannar">
     <div class="bannar-text">
     <h1>Explore Your Travel</h1>
-    <p>travel description</p>
+    <p>Travel is the key that unlocks a treasure trove of experiences. It allows us to venture beyond the boundaries of our everyday lives and immerse ourselves in the richness of different cultures, histories, and landscapes.</p>
+  </div>
+  <div class="bannar-btn">
+    <button>Where go</button>
+    <button>When</button>
+    <button>Select Type</button>
+    <button>Find Now</button>
     </div>
     </div>
     </header>
@@ -49,42 +55,58 @@
     <h3>Choose Your Destination</h3>
     <p>Welcome to our page.Please choose your destination and give us the opportunity to provide you best tour experience.</p>
    </div>
-    <div class="row">
-    <img src="Images/Rectangle 5.png" alt="">
-    <img src="Images/Rectangle 8.png" alt="">
+    <div class="row-a">
+<div class="mal">
+    <h3>Maldives</h3>
 </div>
-<div class="row">
-    <img src="Images/Rectangle 6.png" alt="">
-    <img src="Images/Rectangle 7.png" alt="">
-    <img src="Images/Rectangle 9.png" alt="">
+<div class="ind">
+<h3>Indonesia</h3>
 </div>
+</div>
+<div class="row-b">
+<div class="sri">
+    <h3>Srilanka</h3>
+    </div>
+    <div class="north">
+        <h3>North America</h3>
+    </div>
+    <div class="kash">
+        <h3>Kashmir</h3>
+    </div>
+    </div>
 <div class="row">
-    <img src="Images/Rectangle 11.png" alt="">
-    <img src="Images/Rectangle 10.png" alt="">
+    <div class="bd">
+        <h3>Bangladesh</h3>
+    </div>
+    <div class="ban">
+        <h3>Bandarban</h3>
+    </div>
 </div>
 </div>
 </section>
 <section>
     <div class="why">
+        <div class="why-text">
         <h3>Why Choose Us</h3>
         <p>We are the top ranked travel agency.Due to our servises.If you choose us we ensure that you never be regraint.</p>
+      </div>
         <div class="row-1">
         <div class="hotel">
     <img src="Images/hotel 1.svg" alt="">
     <h3>Handpicked Hotels</h3>
-    <p>description</p>
+    <p>Find Your Book Hotels. Compare Options & Save. Browse Reviews & Photos. Take Advantage of Low Rates on Hundreds of Thousands of Top-Rated Properties. Book Now! </p>
    </div>
    <div class="location">
     <img src="Images/map 1.svg" alt="">
     <h3>World Class Service</h3>
-    <p>description</p>
+    <p>Helping companies save money ontravel is what we do best. Our proven preferredand cost containment strategies can help you get the most return out of your travel budget. </p>
    </div>
     </div>
     <div class="row-1">
         <div class="price">
             <img src="Images/price-tag 1.svg" alt="">
             <h3>Best Price Guarantee</h3>
-            <p>description</p>
+            <p>With our self-service platform, booking business trips is just as easy as booking your holiday. Reliable expert service, access to millions of travel options, and an award-winning travel app make business travel easier and more productive.</p>
         </div>
     </div>
     </div>
@@ -92,12 +114,12 @@
 <section class="discount">
     <div class="discount-text">
  <h3>Deals & Discounts</h3>
- <p>description</p>
+ <p>Traveling can be expensive, but it doesn't have to be. With package flight and hotel deals, you can save money and get the most out of your travel budget. Here are some tips to help you make the most of these deals.</p>
  </div>
  <div class="discount-text-1">
    <div class="card">
     <h3>Tour To Satorini</h3>
-    <p>description</p>
+    <p>Secure your reservation for the 6-day Bangladesh tour package, where you can immerse yourself in the embrace of nature, encounter diverse wildlife, and delve into the local ethnic culture.</p>
     <h4>Price: $1300-$1500</h4>
     <button class="btn-1">Book Now</button>
    </div>
@@ -105,7 +127,7 @@
    <div class="discount-text-2">
    <div class="card">
     <h3>Tour To Satorini</h3>
-    <p>description</p>
+    <p>Secure your reservation for the 6-day Bangladesh tour package, where you can immerse yourself in the embrace of nature, encounter diverse wildlife, and delve into the local ethnic culture.</p>
     <h4>Price: $1300-$1500</h4>
     <button class="btn-1">Book Now</button>
    </div>
@@ -113,20 +135,18 @@
    <div class="discount-text-3">
    <div class="card">
     <h3>Tour To Satorini</h3>
-    <p>description</p>
+    <p>Secure your reservation for the 6-day Bangladesh tour package, where you can immerse yourself in the embrace of nature, encounter diverse wildlife, and delve into the local ethnic culture.</p>
     <h4>Price: $1300-$1500</h4>
     <button class="btn-1">Book Now</button>
     </div>
    </div>
-   <div class="btn-2">
-   <button class="">See All Packages</button>
-   </div>
+   <button class="see">See All Packages</button>
 </section>
 <section>
      <div class="news">
     <div class="letter">
 <h3>Newsletter</h3>
-<p>description</p>
+<p>Sign up to receive daily update news and stories from Discover The World page.</p>
 <form>
 <input type="text" placeholder="Enter your name">
 <input type="email" name="" placeholder="Enter your email" id="">
@@ -135,7 +155,7 @@
 </div>
 <div class="letter-img">
    <div class="letter-text">
- <h6>Travel.com</h6>
+ <p>Travel.com</p>
     <h3>Save up to 70%</h3>
 </div>
 </div>
@@ -147,9 +167,9 @@
     <div class="end-1">
        <div class="h3">
         <img src="Images/Group 40071 (2).png" alt="">
-    <h3>Discover the world</h3>
+    <h3>Discover <span>the world</span></h3>
     </div>
-    <p>description</p>
+    <p>Travel is a remarkable journey that allows us to explore and experience the world in all its beauty and diversity. From the planning stages to the memories made along the way, each step enriches our lives and broadens our perspectives. </p>
     <img src="Images/Social.svg" alt="">
     </div>
     <hr>
